welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:8: error: '(' expected but identifier found.
	if estSurBiscuit()= true {
           ^RunHalf:11: error: '(' expected but identifier found.
	if estSurOrange()= true {
           ^RunHalf:14: error: illegal start of simple expression
}
^