welcome.lessons.welcome.variables.RunHalf.scala.code
override def run() {
var biscuit=0 
var caseOrange=0

while ( 2 * biscuits != caseOrange + 1) {
	avance() 
	if estSurBiscuit()= true {
		biscuit=biscuit+1
	}
	if estSurOrange()= true {
		caseOrange=caseOrange+1
	}
}






}

